--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -12,15 +12,28 @@
   },
   "login": {
     "subtitle": "Sign in to Dan Basket",
-    "username": "Username",
-    "usernamePlaceholder": "Enter your username",
+    "username": "Email",
+    "usernamePlaceholder": "Enter your email address",
     "password": "Password",
     "passwordPlaceholder": "Enter your password",
     "rememberMe": "Remember me",
     "forgotPassword": "Forgot password?",
     "loginButton": "Sign In",
     "noAccount": "Don't have an account?",
-    "signup": "Sign up now"
+    "signup": "Sign up now",
+    "loading": {
+      "logging": "Logging in..."
+    },
+    "errors": {
+      "emailRequired": "Please enter your email address",
+      "passwordRequired": "Please enter your password",
+      "invalidCredentials": "Invalid email or password",
+      "networkError": "Network connection failed, please try again later",
+      "serverResponseError": "Server response format error"
+    },
+    "success": {
+      "loginSuccess": "Login successful"
+    }
   },
   "register": {
     "subtitle": "Create Dan Basket Account",
@@ -50,7 +63,18 @@
       "confirmPasswordRequired": "Please confirm your password",
       "passwordMismatch": "Passwords do not match",
       "verificationCodeRequired": "Please enter verification code",
-      "verificationCodeLength": "Verification code should be 6 digits"
+      "verificationCodeLength": "Verification code should be 6 digits",
+      "networkError": "Network connection failed, please try again later",
+      "serverResponseError": "Server response format error"
+    },
+    "verificationEmail": {
+      "registrationVerificationSubject": "Dan Basket Registration Verification Code",
+      "registrationVerificationText": "Your registration verification code is: ",
+      "registrationVerificationHtml": "<p>Your registration verification code is: <strong>"
+    },
+    "loading": {
+      "sending": "Sending...",
+      "registering": "Registering..."
     }
   }
 }
