--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -26,10 +26,7 @@
     },
     "errors": {
       "emailRequired": "请输入邮箱地址",
-      "passwordRequired": "请输入密码",
-      "invalidCredentials": "邮箱或密码错误",
-      "networkError": "网络连接失败，请稍后重试",
-      "serverResponseError": "服务器响应格式错误"
+      "passwordRequired": "请输入密码"
     },
     "success": {
       "loginSuccess": "登录成功"
@@ -63,9 +60,7 @@
       "confirmPasswordRequired": "请确认密码",
       "passwordMismatch": "两次输入的密码不一致",
       "verificationCodeRequired": "请输入验证码",
-      "verificationCodeLength": "验证码应为6位数字",
-      "networkError": "网络连接失败，请稍后重试",
-      "serverResponseError": "服务器响应格式错误"
+      "verificationCodeLength": "验证码应为6位数字"
     },
     "verificationEmail": {
       "registrationVerificationSubject": "旦篮子注册验证码",
