不知道更新了什么，自己看吧

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,6 +4,10 @@
     "alt": "User Avatar",
     "ariaLabel": "User"
   },
+  "userMenu": {
+    "ariaLabel": "User menu",
+    "logout": "Sign out"
+  },
   "sidebar": {
     "homepage": "Home",
     "courses": "Courses",
