--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -30,6 +30,12 @@
       "upload": "上传头像",
       "gallery": "系统头像"
     },
+    "avatar": {
+      "tabs": {
+        "upload": "上传头像",
+        "system": "系统头像"
+      }
+    },
     "fields": {
       "nickname": "昵称",
       "studentId": "学号",
@@ -122,5 +128,18 @@
       "sending": "发送中...",
       "registering": "注册中..."
     }
+  },
+  "messages": {
+    "dragHereOrClick": "将图片拖拽到此处，或点击选择",
+    "supportedTypes": "支持 PNG/JPG，大小不超过",
+    "invalidImage": "仅支持 PNG/JPG 图片",
+    "fileTooLarge": "文件过大",
+    "fileTooLargeWithLimit": "文件不能超过 {{limit}}MB",
+    "uploadFailed": "上传失败",
+    "loadSystemAvatarsFailed": "加载系统头像失败"
+  },
+  "common": {
+    "cancel": "取消",
+    "confirm": "确定"
   }
 }
