删除马来语。添加翻译后端文件函数

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,6 +6,11 @@
     "actions": {
       "cancel": "Cancel",
       "confirm": "Confirm"
+    },
+    "names": {
+      "australianBeefBurger": "Australian Beef Burger",
+      "yourGrade": "Your Grade",
+      "kim": "Kim"
     }
   },
   "userProfile": {
