语言写到数据库

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -82,7 +82,7 @@
       "language": "语言"
     },
     "descriptions": {
-      "language": "选择旦篮子界面的显示语言。这将影响所有文本和导航元素的显示。"
+      "language": "选择旦篮子界面的显示语言。该选项会改变该账号所有文本和导航元素的语言显示。"
     }
   },
   "sidebar": {
