--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -79,10 +79,17 @@
       "security": "账号安全"
     },
     "fields": {
-      "language": "语言"
+      "language": "语言",
+      "theme": "主题"
     },
     "descriptions": {
-      "language": "选择旦篮子界面的显示语言。该选项会改变该账号所有文本和导航元素的语言显示。"
+      "language": "选择旦篮子界面的显示语言。该选项会改变该账号所有文本和导航元素的语言显示。",
+      "theme": "选择界面的显示主题。该选项会改变整个应用的外观。"
+    },
+    "theme": {
+      "light": "浅色",
+      "dark": "深色",
+      "auto": "跟随系统"
     }
   },
   "sidebar": {
